24-Apr-2011 Module Build functions no longer require passing an Opus.Core.DependencyNode argument, since this is accessible via the module's OwningNode field.

24-Apr-2011 QMake support. Initial support for C/C++ modules and FileUtilities. Generates .pro files that can be loaded into, and built through, QtCreator.

18-Apr-2011 C.Linker.AppendLibrariesToCommandLine adds other libraries into the array rather than turning them into a string.

17-Apr-2011 Do not allow filtered external dependents and required modules to be processed.

17-Apr-2011 Updated CopyFiles code from previous change for the command line builder.

17-Apr-2011 Changed command line builders from using System.String.StringBuilder to Opus.Core.StringArray, so it is easier to identify individual commands (spaces in paths can no longer be confused with separators for commands).

13-Mar-2011 Set version to 0.20.

--------------------------------------------------------------------------------

v0.10
=====

13-Mar-2011 Rename C.ILinkerOptions from IgnoreStandardLibraries property to DoNotAutoIncludeStandardLibraries for clarity.

13-Mar-2011 Set Opus version from 0.1 to 0.10.

13-Mar-2011 Fix typo in DependencyNodeCollection.
            Remove now unused MakeFileData.Included property.

13-Mar-2011 MakeFile update
            MakeFileBuilder now allows adding multiple rules to a MakeFile.
            Added classes MakeFileVariableDictionary and MakeFileTargetDictionary to store intermediate and output Make variables and targets, mapped by type.
            All sub-MakeFiles are now included at the top-level, which reduces issues of multiply-included MakeFiles when there are multiple dependencies.
            C.HeaderLibrary module type supported by MakeFiles.
            Libraries are no longer handled by the OptionCollection mechanism, in order to support GCC --start-group and --end-group bounds. The linker supplies a utility function, AppendLibrariesToCommandLine, to append these properly.